# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: PythonCI.yml  build.yml
nosuchsite0kdskjdaf-com_files/: lessons.rss
page_loader/: bs_parser.py  cli.py  constants.py  html_handler.py  html_parser.py  logger.py  namer.py  network_tools.py  os_tools.py  page_loader.py  parser.py  requester.py  resources.py  saver.py  storage.py  tools.py  url_formatter.py  url_tools.py
page_loader/scripts/: run.py  test.py
tests/: fake_response.py  test_os_tools.py  test_page_loader.py  test_tools.py  test_url_tools.py  tests.py
tests/fixtures/: result.html  test.html
