[tool.poetry]
name = "page-loader"
version = "0.1.0"
description = ""
authors = ["BasedOnEvidence <TestTypoTest@gmail.com>"]
packages = [
	{ include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
rope = "^0.18.0"
requests = "^2.26.0"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.run:main"